current/crash_report/tout10/r2/gcc482/pk16/save_tc/cb2/20190214230456788059991.c-482-3.txt
20190214230456788059991.c: In function ‘func_36’:
20190214230456788059991.c:1269:1: error: unrecognizable insn:
 }
 ^
(insn 21 20 22 5 (set (reg:QI 70)
        (const_int 215 [0xd7])) 20190214230456788059991.c:1126 -1
     (nil))
20190214230456788059991.c:1269:1: internal compiler error: in extract_insn, at recog.c:2154
0xc05df8 _fatal_insn(char const*, rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:109
0xc05e4b _fatal_insn_not_found(rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:117
0xb8b99a extract_insn(rtx_def*)
	../../gcc/recog.c:2154
0x8fec83 instantiate_virtual_regs_in_insn
	../../gcc/function.c:1561
0x90088c instantiate_virtual_regs
	../../gcc/function.c:1928
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
